cmake_minimum_required(VERSION 3.8)

project(Bank)

add_executable(bank main.cpp
src/Card.cpp
src/Card.h 
src/CardBase.h 
src/CardBase.cpp
src/cardNumber.h 
src/cardNumber.cpp 
src/Client.h 
src/Client.cpp 
src/Date.h 
src/Date.cpp 
src/Transactions.h
src/Transactions.cpp
src/UserBase.h 
src/UserBase.cpp
src/Valet.h
src/Valet.cpp
scr/Festel.hpp)
